// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches Button light 1`] = `
.c0 {
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  border: 1px solid #f0f0f0;
  background-color: #f0f0f0;
  border-radius: 0.25rem;
  display: inline-block;
  font-size: 1rem;
  color: #212529;
  padding: 0.375rem 0.75rem;
}

.c0:focus {
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(248,249,250,0.5);
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #f0f0f0;
  background-color: #f0f0f0;
  color: #212529;
  cursor: pointer;
}

.c0:hover:focus,
.c0:focus:focus,
.c0:hover:hover,
.c0:focus:hover {
  border: 1px solid #cccecf;
}

.c0:hover:focus,
.c0:focus:focus,
.c0:hover:hover,
.c0:focus:hover {
  background-color: #e2e6ea;
}

.c0:focus,
.c0:hover {
  border: 1px solid #cccecf;
}

.c0:focus,
.c0:hover {
  background-color: #e2e6ea;
}

<button
  className="c0"
/>
`;

exports[`Styles matches Button light disabled 1`] = `
.c0 {
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  border: 1px solid #f0f0f0;
  background-image: none;
  background-color: #f0f0f0;
  border-radius: 0.25rem;
  display: inline-block;
  opacity: 0.65;
  font-size: 1rem;
  color: #212529;
  padding: 0.375rem 0.75rem;
}

.c0:focus {
  outline: 0;
  box-shadow: 0 0 0 0.2rem rgba(248,249,250,0.5);
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #f0f0f0;
  background-image: none;
  background-color: #f0f0f0;
  color: #212529;
}

<button
  className="c0"
  disabled={true}
/>
`;
